# kafka_databricks_pipeline

./: .gitignore  Makefile  README.md  pytest.ini
v2/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
v2/dashboards/: observability_metric_examples.md
v2/databricks/: README.md  job.yml
v2/docs/: architecture.md  finops_report.md  future_ai_readiness.md  medallion_design.md  runbook.md  so_what_metrics.md  streaming_observability.md
v2/docs/adrs/: 0001-bronze-raw-immutable.md  0002-silver-parsing-and-enrichment-boundary.md  0003-dead-letter-queue-strategy.md  0004-streaming-observability-pillars.md  0005-gold-as-stakeholder-data-product.md  0006-native-spark-over-python-udf.md  0007-preserve-v1-introduce-v2.md
v2/scripts/: demo_pipeline.py  run_bronze_job.py  run_silver_features_job.py  run_silver_parse_job.py
v2/src/dbt/: .gitignore  dbt_project.yml  packages.yml
v2/src/producer/: config.py  twitch_producer.py
v2/src/streaming/jobs/: bronze_ingest.py  dlq_router.py  silver_features.py  silver_parse.py
v2/src/streaming/observability/: freshness_metrics.py  pipeline_slo.py  schema_drift_checks.py  volume_metrics.py
v2/src/streaming/schemas/: dlq_event.py  parsed_chat_event.py  raw_chat_event.py
v2/src/streaming/transforms/: dedupe.py  feature_engineering.py  parsing.py  quality_rules.py
v2/src/streaming/utils/: batch_writes.py  logging.py  (+2 more)
v2/tests/data_quality/: test_quality_rules.py
v2/tests/integration/: test_streaming_job_contracts.py
v2/tests/unit/: test_dedupe.py  test_dlq_router.py  test_observability.py
(+25 files in other folders)
